Move solution to separate folder

--- a/workshop/index.html
+++ b/workshop/index.html
@@ -2,34 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Contact | Learn HTML Forms</title>
+    <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-    <form id="form" action="/.netlify/functions/part1" method="GET">
-      <label for="name">Name</label>
-      <input id="name" name="name" type="text" />
-
-      <label for="email">Email</label>
-      <input id="email" name="email" type="email" />
-
-      <label for="tel">Telephone</label>
-      <input id="tel" name="tel" type="tel" />
-
-      <fieldset>
-        <legend>Preferred Contact</legend>
-        <input type="radio" name="contact" value="email" checked />
-        <input type="radio" name="contact" value="telephone" />
-      </fieldset>
-
-      <label for="message">Message</label>
-      <textarea></textarea>
-
-      <label for="marketingConsent">Sign me up</label>
-      <input id="marketingConsent" name="marketingConsent" type="checkbox" />
-
-      <button type="submit">Submit</button>
-    </form>
+    <h1>Contact</h1>
+    <!-- Your form goes here -->
   </body>
 </html>
