--- a/solution/index.html
+++ b/solution/index.html
@@ -10,7 +10,7 @@
     <h1>Contact</h1>
     <form id="form" action="/submit/part2" method="GET">
       <label for="name">Name</label>
-      <input id="nam" name="name" type="text" />
+      <input id="name" name="name" type="text" />
 
       <label for="email">Email</label>
       <input id="email" name="email" type="email" />
