Use deployed api endpoint in solution

--- a/solution/index.html
+++ b/solution/index.html
@@ -8,7 +8,11 @@
   </head>
   <body>
     <h1>Contact</h1>
-    <form id="form" action="/submit/part2" method="GET">
+    <form
+      id="form"
+      action="https://learn-forms.netlify.com/submit/part3"
+      method="GET"
+    >
       <label for="name">Name</label>
       <input id="name" name="name" type="text" />
 
@@ -32,6 +36,9 @@
 
         <input id="contact-tel" type="radio" name="contact" value="telephone" />
         <label for="contact-tel" class="radio">Telephone</label>
+
+        <input id="contact-post" type="radio" name="contact" value="post" />
+        <label for="contact-post" class="radio">Post</label>
       </fieldset>
 
       <label for="message">Message</label>
